--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 }
 
 body {
-  width: 100vw;
+  width: auto;
   height: auto;
   background-color: #fafafa;
+  overflow-x: hidden;
+  padding-bottom: 36px;
 }
