--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 body {
   width: auto;
   height: auto;
-  background-color: #fafafa;
+  background-color: #161623;
   overflow-x: hidden;
   padding-bottom: 36px;
 }
